2010-12-04  Wolfgang Lux  <wolfgang.lux@gmail.com>

	* Framework/PCProjectManager.m (-newProject):
	Improve Riccardo's previous patch. Don't ask for a new project
	directory with an extension project or pcproj and do not
	arbitrarily strip extensions from the project name.

2010-12-04 German Arias <german@xelalug.org>
	
	* Modules/Projects/Application/PCAppProject.m: 
	Reverted a previous change since the extension "project"
	is not used anymore.

2010-12-01 Riccardo Mottola

	* Framework/PCProjectManager.m:
	Create project in a path with the project name.

	* Resources/Info-gnustep.plist,
	* English.lproj/Info.gorm
	Version bump.

	* Framework/PCProjectBuilder.m:
	Removed useless INSTDOMAIN variable during build phase.

2010-11-28 Riccardo Mottola

	* Framework/PCMakefileFactory.m
	* Framework/PCProjectBuilder.m
	* Framework/PCProjectInspector.m
	* Framework/English.lproj/BuildAttributes.gorm
	* Modules/Projects/Application/PCAppProject.m
	* Modules/Projects/ResourceSet/PCResourceSetProject.m
	* Modules/Projects/Bundle/PCBundleProject.m
	* Modules/Projects/Tool/PCToolProject.m
	* Headers/ProjectCenter/PCDefines.h
	* Headers/ProjectCenter/PCProjectInspector.h:
	Set, use and create makefiles using ain installation DOMAIN and not a directory.

2010-11-24 German Arias <german@xelalug.org>
	* Headers/ProjectCenter/PCProjectInspector.h:
	* Framework/PCProjectInspector.m:
	* Framework/English.lproj/ProjectInspector.gorm:
	Removed "Project Languages" option on Inspector.

2010-11-23 Riccardo Mottola

	* Framework/PCFileManager.m:
	Initialize isDir value.

2010-11-22 German Arias <german@xelalug.org>
	* Framework/GNUmakefile: Added ProjectLanguages.gorm
	* Headers/ProjectCenter/PCProjectInspector.h:
	* Framework/PCProjectInspector.m:
	Added projectLanguagesView and the method create the
	panel.
	* Framework/English.lproj/ProjectInspector.gorm:
	Added "ProjectLanguages" option.
	* Framework/English.lproj/ProjectLanguages.gorm: