@@ -1,5 +1,11 @@
 2010-12-04  Wolfgang Lux  <wolfgang.lux@gmail.com>
 
+	* Framework/PCProjectBuilder.m (-build:, -logStdOut:, -logErrOut:):
+	Fix race condition, which could lock PC after running a build
+	task.
+
+2010-12-04  Wolfgang Lux  <wolfgang.lux@gmail.com>
+
 	* Framework/PCProjectManager.m (-newProject):
 	Improve Riccardo's previous patch. Don't ask for a new project
 	directory with an extension project or pcproj and do not
